log/build_2021-06-09_10-00-56/control_pkg/stdout_stderr.log
[35m[1mScanning dependencies of target control_pid_p1_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::subs_callback(interfaces::msg::ImgData_<std::allocator<void> >::SharedPtr) const’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:66:25: error: expected primary-expression before ‘>’ token
   66 |    obj1ang_msg=data_msg=>obj1_ang;
      |                         ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:66:26: error: ‘obj1_ang’ was not declared in this scope; did you mean ‘obj1y_msg’?
   66 |    obj1ang_msg=data_msg=>obj1_ang;
      |                          ^~~~~~~~
      |                          obj1y_msg
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:69:25: error: expected primary-expression before ‘>’ token
   69 |    obj2ang_msg=data_msg=>obj2_ang;
      |                         ^
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:69:26: error: ‘obj2_ang’ was not declared in this scope; did you mean ‘obj2y_msg’?
   69 |    obj2ang_msg=data_msg=>obj2_ang;
      |                          ^~~~~~~~
      |                          obj2y_msg
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::p2_subs(interfaces::msg::PlatState_<std::allocator<void> >::SharedPtr) const’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:77:20: error: cannot convert ‘const SharedPtr’ {aka ‘const std::shared_ptr<interfaces::msg::PlatState_<std::allocator<void> > >’} to ‘int’ in assignment
   77 |    platform2_state=msg;
      |                    ^~~
      |                    |
      |                    const SharedPtr {aka const std::shared_ptr<interfaces::msg::PlatState_<std::allocator<void> > >}
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:40,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:1:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::timer_callback()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:111:47: error: expected ‘)’ before ‘platform1_state’
  111 |     RCLCPP_INFO(this->get_logger(), "Fase %d" platform1_state);
      |                                               ^~~~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:111:5: note: to match this ‘(’
  111 |     RCLCPP_INFO(this->get_logger(), "Fase %d" platform1_state);
      |     ^~~~~~~~~~~
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
